# AI

./: 01 AI大模型开发基础.md  pyproject.toml
01/: 程序01 和大模型的初始交互.py  程序01.py  程序02 和大模型进行多轮对话 文字形式.py  程序03 和大模型进行多轮对话 图片+文字形式.py  程序04 创建第一个agent智能体.py  程序05 大模型生成结果的结构化输出.py  程序06 给agent动态配置模型.py
01/AI试用/: 用例生成试用.py
